# stoexsim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
simulation_results/: accrecords_sd_100.792.txt  accrecords_sd_101.34.txt  accrecords_sd_101.583.txt  accrecords_sd_101.638.txt  accrecords_sd_101.734.txt  accrecords_sd_101.752.txt  accrecords_sd_102.837.txt  accrecords_sd_103.604.txt  accrecords_sd_103.721.txt  accrecords_sd_103.936.txt  accrecords_sd_104.914.txt  accrecords_sd_104.923.txt  accrecords_sd_106.161.txt  accrecords_sd_106.857.txt  accrecords_sd_107.008.txt  accrecords_sd_107.241.txt  accrecords_sd_108.002.txt  accrecords_sd_108.039.txt  accrecords_sd_109.933.txt  accrecords_sd_110.106.txt  accrecords_sd_110.276.txt  accrecords_sd_110.522.txt  accrecords_sd_110.624.txt  accrecords_sd_111.419.txt  accrecords_sd_112.182.txt  accrecords_sd_112.382.txt  accrecords_sd_112.441.txt  accrecords_sd_112.97.txt  accrecords_sd_113.994.txt  accrecords_sd_114.339.txt  accrecords_sd_114.454.txt  accrecords_sd_114.548.txt  accrecords_sd_116.897.txt  accrecords_sd_120.483.txt  accrecords_sd_125.01.txt  accrecords_sd_125.298.txt  accrecords_sd_126.757.txt  accrecords_sd_127.904.txt  accrecords_sd_129.919.txt  accrecords_sd_133.035.txt  (+59 more)
src/stoexsim/: __init__.py  crustal_amps_tmp.txt  crustal_amps_tmp.txt-e  cshtest.csh  do_exsim.csh  do_exsim_aleatoric.csh  exsim_dmb.params_base  hyperparameters.txt  leslie_do_exsim_aleatoric.csh  multi_run.sh  site_amps.txt
tests/: test_stoexsim.py
(+53 files in other folders)
